<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nababu</string>
    <string name="username">Username:</string>
    <string name="start">Start</string>
    <string name="scan">Scan</string>
    <string name="host_game">Host Game</string>
    <string name="join_game">Join Game</string>
    <string name="waiting_for_others">Waiting for other players...</string>
    <string name="paired_devices">Paired devices</string>
    <string name="new_devices">New devices</string>
    <string name="none_devices_paired">No devices have been paired</string>
    <string name="none_devices_found">No devices have been found</string>

</resources>
