<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_game"
        android:textSize="20pt" />

    <TextView
        android:id="@+id/text_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_others"
        android:textSize="10pt" />

    <ListView
        android:id="@+id/list_of_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/button_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start"
        android:onClick="startGame" />
</LinearLayout>