<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:textSize="15pt" />

    <TextView android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF6600"
        android:text="@string/paired_devices"
        android:textSize="8pt" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF6600"/>

    <ListView
        android:id="@+id/list_of_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF6600"
        android:text="@string/new_devices"
        android:textSize="8pt" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF6600"/>

    <ListView
        android:id="@+id/list_of_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button android:id="@+id/button_scan"
        android:enabled="false"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scan"
        android:onClick="scanDevices" />
</LinearLayout>